cli/tests/snapshot/inputs/errors/yaml_error_location_with_unicode.ncl
# capture = 'stderr'
# command = ['eval']
(import "../../imports/map-with-unicode.yaml") | { "tiếng" : Number, "việt" : String }
